--- a/src/CatNip.Infrastructure/CatNip.Infrastructure.csproj
+++ b/src/CatNip.Infrastructure/CatNip.Infrastructure.csproj
@@ -15,6 +15,12 @@
     <PackageTags>clean;architecture;template;infrastructure;abstractions</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="CatNip.Domain" Version="0.0.1-alpha" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+  </ItemGroup>
+
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
