--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -777,3 +777,8 @@ dotnet_diagnostic.CA2257.severity = warning
 dotnet_diagnostic.CA2258.severity = warning
 dotnet_diagnostic.CA2259.severity = warning
 dotnet_diagnostic.CA2260.severity = warning
+
+# Exceptions
+[*.cs]
+dotnet_diagnostic.CA1005.severity = silent
+dotnet_diagnostic.CA2007.severity = silent
