--- a/src/CatNip.Infrastructure/CatNip.Infrastructure.csproj
+++ b/src/CatNip.Infrastructure/CatNip.Infrastructure.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="CatNip.Domain" Version="0.1.0-alpha" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
