--- a/src/CatNip.Infrastructure/CatNip.Infrastructure.csproj
+++ b/src/CatNip.Infrastructure/CatNip.Infrastructure.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="CatNip.Domain" Version="0.2.0-alpha" />
+    <PackageReference Include="CatNip.Domain" Version="0.9.0-beta" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.1" />
   </ItemGroup>
